--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             --primary-dark: #001f3f; /* Dark Blue from hothanhtuan.com */
             --accent-gold: #ffc300; /* Gold/Orange accent from hothanhtuan.com */
             --homega-green: #01978e; /* Green from Homega's button */
-            --light-grey-bg: #f4f4f4; /* Light background from Homega */
+            --main-background-color: #CAA348; /* Màu nền chính mới */
             --text-color-dark: #2c3e50; /* Darker text for readability */
             --text-color-light: #666; /* Lighter text for paragraphs */
             --white: #ffffff;
@@ -31,7 +31,7 @@
             font-family: 'Roboto', sans-serif; /* Dễ đọc, hiện đại */
             line-height: 1.6;
             color: var(--text-color-dark);
-            background-color: var(--white);
+            background-color: var(--main-background-color); /* Áp dụng màu nền chính */
             -webkit-font-smoothing: antialiased;
             scroll-behavior: smooth;
         }
@@ -79,7 +79,7 @@
 
         /* About Homega Section */
         .about-homega-section {
-            background-color: var(--light-grey-bg);
+            background-color: var(--white); /* Đặt lại màu nền trắng cho section này */
             padding-top: 80px; /* Giữ padding như gốc */
             padding-bottom: 0; /* Giữ padding như gốc */
         }
@@ -133,7 +133,7 @@
 
         /* Product Showcase Section */
         .product-showcase-section {
-            background-color: var(--light-grey-bg);
+            background-color: var(--white); /* Đặt lại màu nền trắng cho section này */
             padding-top: 0; /* Giữ padding như gốc */
             padding-bottom: 80px; /* Giữ padding như gốc */
         }
@@ -245,8 +245,19 @@
             padding-bottom: 0;
         }
 
-        /* Bỏ .contact-heading (tiêu đề đã bị loại bỏ) */
-        .contact-cta-section .button-group {
+        .contact-cta-section .contact-text-line { /* Class mới cho dòng chữ liên hệ */
+            font-family: 'Roboto', sans-serif;
+            font-size: 1em; /* Kích thước nhỏ hơn */
+            font-weight: 400; /* Độ đậm vừa phải */
+            color: rgba(255, 255, 255, 0.9);
+            margin-bottom: 25px; /* Khoảng cách với nút */
+            text-align: center;
+            line-height: 1.4; /* Đảm bảo đủ khoảng cách dòng */
+            max-width: 700px; /* Giới hạn chiều rộng để giữ trên 1 dòng nếu có thể */
+            white-space: normal; /* Cho phép xuống dòng nếu quá dài */
+        }
+
+        .button-group {
             display: flex;
             justify-content: center;
             gap: 20px;
@@ -275,11 +286,9 @@
             transform: translateY(-3px); /* Hiệu ứng nhấc nhẹ khi hover */
         }
 
-        .btn.contact-btn .icon-svg {
-            width: 22px; /* Kích thước icon SVG lớn hơn */
-            height: 22px;
-            fill: currentColor; /* Icon kế thừa màu chữ */
-            margin-right: 12px; /* Khoảng cách lớn hơn */
+        .btn.contact-btn .icon-email { /* Class mới cho icon email */
+            font-size: 22px; /* Kích thước icon */
+            margin-right: 12px; /* Khoảng cách */
             vertical-align: middle;
         }
 
@@ -325,6 +334,14 @@
                 padding: 15px 30px;
                 font-size: 1em;
             }
+            .contact-cta-section .contact-text-line {
+                 font-size: 0.9em; /* Nhỏ hơn trên mobile */
+                 margin-bottom: 20px;
+            }
+            .btn.contact-btn .icon-email {
+                font-size: 18px;
+                margin-right: 10px;
+            }
         }
 
         @media (max-width: 480px) {
@@ -340,10 +357,13 @@
                 padding: 12px 25px;
                 font-size: 0.9em;
             }
-            .btn.contact-btn .icon-svg {
-                width: 18px; 
-                height: 18px;
+            .btn.contact-btn .icon-email {
+                font-size: 16px;
                 margin-right: 8px;
+            }
+            .contact-cta-section .contact-text-line {
+                 font-size: 0.8em;
+                 margin-bottom: 15px;
             }
         }
     </style>
@@ -416,14 +436,14 @@
 
         <section class="section contact-cta-section">
             <div class="container contact-container">
+                <p class="contact-text-line">Nếu cần thêm thông tin hoặc tư vấn sản phẩm, xin vui lòng liên hệ với chúng tôi</p>
                 <div class="button-group">
                     <a href="mailto:info@homega.vn" target="_blank" class="btn contact-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1800 1800" class="icon-svg"><path d="M531.087,344.727c0.247,0,0.492,0.033,0.739,0.033h453.558c16.819,0,30.444-13.625,30.444-30.436 c0-16.815-13.625-30.435-30.444-30.435H638.226H531.826c-16.811,0-30.44,13.62-30.44,30.435 C501.386,330.885,514.624,344.331,531.087,344.727z"></path><path d="M531.826,497.389h749.422c16.814,0,30.443-13.629,30.443-30.439c0-16.814-13.629-30.439-30.443-30.439 H531.826c-16.811,0-30.44,13.625-30.44,30.439C501.386,483.76,515.016,497.389,531.826,497.389z"></path><path d="M531.826,650.009h749.422c16.814,0,30.443-13.633,30.443-30.444c0-8.872-3.822-16.827-9.877-22.389 c-5.424-4.982-12.625-8.046-20.566-8.046H531.826c-7.938,0-15.143,3.064-20.567,8.046c-6.054,5.562-9.873,13.517-9.873,22.389 C501.386,636.376,515.016,650.009,531.826,650.009z"></path><path d="M1311.691,772.194c0-16.806-13.629-30.436-30.443-30.436H531.826c-16.811,0-30.44,13.629-30.44,30.436 c0,16.815,13.629,30.444,30.44,30.444h749.422C1298.063,802.638,1311.691,789.009,1311.691,772.194z"></path><path d="M1772.088,533.511c-2.481-3.422-5.691-6.4-9.603-8.622l-246.454-139.961v-82.389v-9.853 c-1.264-7.738-5.432-14.501-11.406-19.066l-49.465-42.835l-131.073-113.508l-61.889-53.596c-5.286-4.582-11.866-7.021-18.591-7.275 h-2.197H937.55h-66.904H383.746c-47.809,0-86.705,38.895-86.705,86.696V382.15L61.554,515.893 c-31.678,11.565-54.396,41.913-54.396,77.54v1067.543c0,45.554,37.064,82.618,82.622,82.618h1625.598 c45.558,0,82.623-37.064,82.623-82.618V593.433C1798,569.839,1788.002,548.583,1772.088,533.511z M1614.426,510.814l92.579,52.583 l-11.661,8.301l-179.313,127.664V571.698v-60.883v-55.873L1614.426,510.814z M1405.5,267.454h-132.895V152.361L1405.5,267.454z M357.922,571.698v-60.883v-93.226v-70.01V143.102c0-14.239,11.585-25.825,25.824-25.825h379.699H886.73h34.734h123.285h167.617 v180.296c0,16.631,13.483,30.11,30.119,30.11h212.674v22.668v70.015v90.448v60.883V742.7l-397.298,282.87l-50.781,36.148 l-18.591,13.241l-81.088,57.728l-81.093-57.728l-18.611-13.25l-50.782-36.155L357.922,741.483V571.698z M193.76,510.814 l103.281-58.649v58.649v60.883V698.14L119.448,571.698l-14.597-10.395L193.76,510.814z M68.036,1648.984V609.822l229.005,163.047 l60.88,43.344L710.7,1067.38l-8.372,7.58l-67.267,60.871L68.036,1648.984z M121.495,1682.723l604.294-546.892l35.693-32.304 l45.37,32.304l82.897,59.028c5.283,3.76,11.462,5.637,17.653,5.637c6.187,0,12.369-1.877,17.652-5.637l82.889-59.028l45.354-32.286 l35.686,32.286l604.311,546.892H121.495z M1737.119,1640.271l-557.41-504.439l-67.267-60.871l-8.359-7.563l351.077-249.962 l60.871-43.348l221.088-157.407V1640.271z"></path></svg>
-                        Gửi Email cho chúng tôi
+                        <i class="fas fa-envelope icon-email"></i> Gửi Email cho chúng tôi
                     </a>
                 </div>
             </div>
         </section>
     </main>
-    </body>
+</body>
 </html>
