--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <style>
-        /* Custom Colors based on hothanhtuan.com and Homega.vn elements */
         :root {
-            --primary-dark: #001f3f; /* Dark Blue from hothanhtuan.com */
-            --accent-gold: #ffc300; /* Gold/Orange accent from hothanhtuan.com */
+            --primary-dark: #001f3f;
+            --accent-gold: #ffc300;
             --homega-green: #01978e; /* Green from Homega's button */
             --main-background-color: #CAA348; /* MÀU NỀN CHÍNH CŨ: Vàng đất/Nâu cam */
             --light-grey-bg-section: #f4f4f4; /* MÀU NỀN XÁM NHẠT cho các section cụ thể */
@@ -44,7 +43,7 @@
 
         .container {
             width: 90%;
-            max-width: 1100px; /* Chiều rộng tương tự trang gốc */
+            max-width: 1100px;
             margin: 0 auto;
             padding: 20px 0; /* Padding mặc định */
         }
@@ -411,7 +410,7 @@
                 </div>
                 <div class="column content-column-text">
                     <h2>Công ty Cổ phần HOMEGA</h2>
-                    <p>là đơn vị chuyên nghiệp trong lĩnh vực phân phối sơn nước, mang đến giải pháp sơn chất lượng cao với nhãn hiệu **ATECH**. Với sứ mệnh góp phần xây dựng và bảo vệ không gian sống của mọi người, HOMEGA cam kết cung cấp các sản phẩm sơn có độ bền bỉ, an toàn, và đa dạng màu sắc.</p>
+                    <p>là đơn vị chuyên nghiệp trong lĩnh vực phân phối sơn nước, mang đến giải pháp sơn chất lượng cao với nhãn hiệu ATECH. Với sứ mệnh góp phần xây dựng và bảo vệ không gian sống của mọi người, HOMEGA cam kết cung cấp các sản phẩm sơn có độ bền bỉ, an toàn, và đa dạng màu sắc.</p>
                     <p>Được dẫn dắt bởi đội ngũ giàu kinh nghiệm và tâm huyết, chúng tôi không ngừng đổi mới và nâng cao chất lượng dịch vụ, luôn đặt uy tín và sự hài lòng của khách hàng lên hàng đầu.</p>
                 </div>
             </div>
@@ -438,29 +437,29 @@
 
         <section class="section why-atech-section">
             <div class="container">
-                <h2 class="section-title text-white">Với **ATECH**</h2>
+                <h2 class="section-title text-white">Với ATECH</h2>
                 <p class="section-description text-white">Chúng tôi tự tin mang đến những giải pháp tối ưu cho mọi công trình, từ ngôi nhà nhỏ đến dự án lớn. Hãy cùng HOMEGA tạo nên những không gian sống ấn tượng, bền vững với thời gian.</p>
 
                 <div class="features-list-grid">
                     <div class="feature-item">
                         <i class="fas fa-cube icon"></i>
                         <h3>Chất lượng sản phẩm</h3>
-                        <p>**ATECH** đáp ứng các tiêu chuẩn chất lượng cao, đảm bảo độ bền màu, chống thấm, và khả năng bảo vệ tối ưu. Chúng tôi cam kết mang đến những sản phẩm đáng tin cậy, giúp duy trì vẻ đẹp bền lâu cho mọi công trình.</p>
+                        <p>Đáp ứng các tiêu chuẩn chất lượng cao, đảm bảo độ bền màu, chống thấm, và khả năng bảo vệ tối ưu. Chúng tôi cam kết mang đến những sản phẩm đáng tin cậy, giúp duy trì vẻ đẹp bền lâu cho mọi công trình.</p>
                     </div>
                     <div class="feature-item">
                         <i class="fab fa-connectdevelop icon"></i>
                         <h3>Đổi mới và phát triển</h3>
-                        <p>HOMEGA không ngừng nghiên cứu và áp dụng công nghệ tiên tiến để nâng cao chất lượng sản phẩm. Liên tục cập nhật xu hướng mới để mang đến các giải pháp sơn tường hiện đại, phù hợp với nhu cầu thị trường.</p>
+                        <p>Không ngừng nghiên cứu và áp dụng công nghệ tiên tiến để nâng cao chất lượng sản phẩm. Liên tục cập nhật xu hướng mới để mang đến các giải pháp sơn tường hiện đại, phù hợp với nhu cầu thị trường.</p>
                     </div>
                     <div class="feature-item">
                         <i class="fab fa-servicestack icon"></i>
                         <h3>Dịch vụ khách hàng tận tâm</h3>
-                        <p>Đội ngũ HOMEGA luôn sẵn sàng hỗ trợ và tư vấn chi tiết, từ việc chọn màu sắc phù hợp đến giải đáp mọi thắc mắc kỹ thuật, đảm bảo khách hàng có trải nghiệm tốt nhất trong suốt quá trình sử dụng sản phẩm.</p>
+                        <p>Luôn sẵn sàng hỗ trợ và tư vấn chi tiết, từ việc chọn màu sắc phù hợp đến giải đáp mọi thắc mắc kỹ thuật, đảm bảo khách hàng có trải nghiệm tốt nhất trong suốt quá trình sử dụng sản phẩm.</p>
                     </div>
                      <div class="feature-item">
                         <i class="fas fa-feather-alt icon"></i>
                         <h3>Uy tín và minh bạch</h3>
-                        <p>HOMEGA luôn đặt chữ tín lên hàng đầu, duy trì tính minh bạch trong mọi giao dịch và cam kết sản phẩm. Chúng tôi xây dựng mối quan hệ lâu dài với khách hàng bằng sự trung thực và cam kết rõ ràng về chất lượng.</p>
+                        <p>Đặt chữ tín lên hàng đầu, duy trì tính minh bạch trong mọi giao dịch và cam kết sản phẩm. Chúng tôi xây dựng mối quan hệ lâu dài với khách hàng bằng sự trung thực và cam kết rõ ràng về chất lượng.</p>
                     </div>
                 </div>
             </div>
