--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <style>
+        /* Custom Colors based on hothanhtuan.com and Homega.vn elements */
         :root {
-            --primary-dark: #001f3f;
-            --accent-gold: #ffc300;
+            --primary-dark: #001f3f; /* Dark Blue from hothanhtuan.com */
+            --accent-gold: #ffc300; /* Gold/Orange accent from hothanhtuan.com */
             --homega-green: #01978e; /* Green from Homega's button */
             --main-background-color: #CAA348; /* MÀU NỀN CHÍNH CŨ: Vàng đất/Nâu cam */
             --light-grey-bg-section: #f4f4f4; /* MÀU NỀN XÁM NHẠT cho các section cụ thể */
@@ -107,7 +108,6 @@
             max-width: 300px; /* Kích thước ảnh logo trong phần giới thiệu */
             height: auto;
             border-radius: 4px; /* Bo góc nhẹ hơn, viền chìm */
-            /* Bỏ box-shadow để viền chìm vào nền */
             display: block;
             margin: 0 auto; /* Căn giữa ảnh */
         }
