--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <style>
-        /* Custom Colors based on hothanhtuan.com and Homega.vn elements */
         :root {
-            --primary-dark: #001f3f; /* Dark Blue from hothanhtuan.com */
-            --accent-gold: #ffc300; /* Gold/Orange accent from hothanhtuan.com */
+            --primary-dark: #001f3f;
+            --accent-gold: #ffc300;
             --homega-green: #01978e; /* Green from Homega's button */
             --main-background-color: #CAA348; /* MÀU NỀN CHÍNH CŨ: Vàng đất/Nâu cam */
             --light-grey-bg-section: #f4f4f4; /* MÀU NỀN XÁM NHẠT cho các section cụ thể */
